another alignment fix

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -46,7 +46,7 @@
         @include m.spacing;
 
         @media screen and (max-width: v.$smallScreen) {
-          left:16.5%; //overrides left in spacing mixin
+          left:18%; //overrides left in spacing mixin
         }
       }
     }
